--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azizka/todos",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Todos list app implemented on pure JavaScript",
   "main": "index.js",
   "scripts": {},
@@ -26,6 +26,7 @@
     "jsdom": "^18.0.1",
     "rollup": "^2.60.0",
     "rollup-plugin-import-css": "^3.0.2",
-    "rollup-plugin-serve": "^1.1.0"
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
